argocd-amd/whatsapp-bot-amd-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsapp-bot-svc
spec:
  type: ClusterIP
  selector:
    app: whatsapp-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whatsapp-bot-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: whatsapp-bot.201.23.17.249.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whatsapp-bot-svc
                port:
                  number: 80
    - host: whatsapp-bot.beloni.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whatsapp-bot-svc
                port:
                  number: 80
